--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -15,10 +15,14 @@ ul{
 }
 
 .contenido-navegacion{
-    position: absolute;
+    position: fixed;
     z-index: 10000;
     width: 100%;
     height: 100%;
+
+    @include m.desktop{
+        position: absolute;
+    }
 
 /*NAVEGACION*/
     .navegacion{
