--- a/src/scss/layout/_proyectos.scss
+++ b/src/scss/layout/_proyectos.scss
@@ -55,8 +55,11 @@
 }
 
 .contenedorg-proyectos {
+
+    padding: 2rem 0;
     h2 {
         text-align: center;
+        margin: 0;
     }
 
 }
